# melt

./: Cargo.toml  README.md
src/: decompress.rs  extension.rs  lib.rs  main.rs  opts.rs
tests/: get_extention.rs
