[package]
name = "melt"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
description = "This is a command-line tool to decompress files of various extensions"
repository = ""
license = "MIT"
readme = "README.md"
# see https://crates.io/category_slugs
categories = [""]
# see https://crates.io/keywords
keywords = [""]

[dependencies]
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
