[package]
name = "melt"
version = "0.1.6"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2021"
description = "This is a command-line tool to decompress files of various extensions"
repository = "https://github.com/moisutsu/melt"
license = "MIT"
readme = "README.md"
# see https://crates.io/category_slugs
categories = ["command-line-utilities"]
# see https://crates.io/keywords
keywords = ["cli"]

[dependencies]
anyhow = "1.0.33"
clap = { version = "3.0.0", features = ["derive"] }
once_cell = "1.5.2"
